<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Math Challenger</string>
    <string name="action_settings">Settings</string>
    <string name="home_login_tv">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Accedi</string>
    <string name="text_registrazione_home">Se non possiedi un account, clicca il tasto sottostante per registrarti</string>
    <string name="register_button">Registrati</string>
    <string name="lost_password_tv">Se hai dimenticato la password, clicca il tasto sottostante</string>
    <string name="lost_pass_button">Recupera password</string>
    <string name="register_title_tv">Registrati</string>
    <string name="username_tv">Username</string>
    <string name="password_tv">Password</string>
    <string name="email_tv">e-mail</string>
    <string name="conferma_password_registrazione_hint">Conferma password</string>
    <string name="email_hint">E-Mail</string>
    <string name="reset_pass_title_tv">Reset password</string>
    <string name="reset_pass_text">Tramite questa funzionalità verrà generata una nuova password che le verrà inviata all\'indirizzo fornito in fase di registrazione.</string>
    <string name="reset_password_button">Reset password</string>
    <string name="login_fail_message">Login fallito!</string>
    <string name="reg_password_diverse">Le password inserite non corrispondono</string>
    <string name="communication_error">Errore di comunicazione</string>
    <string name="error_unknown">Errore indefinito</string>
    <string name="reset_password_ok">Le è stata inviata una email contenente una nuova password</string>
    <string name="reset_password_error">La password non è stata resettata</string>
    <string name="homegioco_nuovapartita">Nuova partita</string>
    <string name="homegioco_statistiche_button">Statistiche</string>
    <string name="homegioco_partiteincorso_tv">Partite in corso</string>
    <string name="homegioco_partite_in_attesa">Partite in attesa</string>
    <string name="homegioco_test_partita_button">Partita prova</string>
    <string name="action_cambia_password_menu">Cambia password</string>
    <string name="action_logout_menu">Logout</string>
    <string name="action_exit_menu">Esci</string>
    <string name="title_activity_activity_cambia_password">ActivityCambiaPassword</string>
    <string name="hello_world">Hello world!</string>
    <string name="cambio_pass_vecchia">Vecchia Password</string>
    <string name="cambio_pass_nuova_tv">Nuova Password</string>
    <string name="cambia_password_conferma_tv">Conferma Password</string>
    <string name="message_cambio_pass_password_non_corrispondenti">Le password inserite non corrispondono</string>
    <string name="message_cambio_pass_ok">Password cambiata correttamente</string>
    <string name="homegioco_partite_in_corso">Partite in corso</string>
    <string name="homegioco_partite_terminate">Partite terminate</string>
    <string name="title_activity_gioca_partita">GiocaPartitaActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_visualizza_partita">VisualizzaPartitaActivity</string>
    <string name="title_activity_nuova_partita">Math Challenger</string>
    <string name="nuova_partita_casuale">Scontro casuale</string>
    <string name="nuova_partita_cerca_utente">Cerca utente</string>
    <string name="elenco_amici">Elenco amici</string>
    <string name="dialog_abbandona_partita">Vuoi abbandonare la partita?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="title_activity_cerca_utente">CercaUtenteActivity</string>
    <string name="button_cerca">Cerca</string>
    <string name="messagge_cerca_contains_spazio">La stringa usata non deve contenere spazi</string>
    <string name="messagge_cerca_length">La stringa deve avere almeno 3 caratteri</string>
    <string name="risultato_ricerca_nessun_risultato">Nessun risultato trovato</string>
    <string name="risultato_ricerca_trovati">Trovati: </string>
    <string name="errore_durante_creazione_partita">Si è verificato un errore durante la creazione della partita</string>
    <string name="amico_aggiunto">Amico aggiunto!</string>
    <string name="amico_non_aggiunto">Riprova. Amico non aggiunto :(</string>
    <string name="gioca">Gioca</string>
    <string name="in_attesa_dell_avversario">In attesa dell\'avversario</string>
    <string name="pareggiata">Pareggiata :|</string>
    <string name="persa">Hai perso :(</string>
    <string name="vinto">HAI VINTO!</string>
    <string name="tempo_scaduto">Tempo scaduto :S</string>
    <string name="abbandonata_sfidante">Abbandonata dallo sfidante</string>
    <string name="abbandonata">Hai abbandonato la partita</string>
    <string name="hint_cerca_utente">Digita l\'username da cercare</string>
    <string name="visualizza_errore_dettagli">Connessione assente</string>
    <string name="string_contains_spaces">Non è consentito inserire spazi</string>
    <string name="exit_confirm">Sei sicuro di voler uscire?</string>
    <string name="invalid_registration_username">L\'username non è valido (max 30 caratteri)</string>
    <string name="invalid_registration_mail">La mail non è valida (max 100 caratteri)</string>
    <string name="invalid_registration_password">La password non è valida (min 8 caratteri)</string>
    <string name="empty_fields">Compilare tutti i campi</string>
    <string name="cerca_nessun_utente_trovato">Nessun utente trovato</string>
    <string name="error_delete_friend_error">Si è verificato un errore durante l\'eliminazione</string>
    <string name="errore_connessione">Errore di connessione</string>
    <string name="errore_verificare_connessione">Verificare che la connessione sia attiva</string>
    <string name="errore_0"></string>
    <string name="errore_1">Devi essere loggato per compiere quest\'azione</string>
    <string name="errore_2">Sei già loggato</string>
    <string name="errore_3">Codice autenticazione non valido</string>
    <string name="errore_4">La vecchia password non corrisponde</string>
    <string name="errore_5">Username già utilizzato</string>
    <string name="errore_6">Non puoi sfidare questo utente</string>
    <string name="errore_7">Non è una tua partita</string>
    <string name="errore_8">Partita non trovata</string>
    <string name="errore_9">Riprova più tardi</string>
    <string name="errore_10">Non puoi aggiungere questo utente agli amici</string>
    <string name="errore_11">Per poter effettuare l\'accesso, scarica l\'ultima versione di Math Challenger dal Play Store</string>
    <string name="partita_avviso_landscape">Posiziona il dispositivo in posizione Portrait</string>
    <string name="menu_aggiorna_statistiche">Aggiorna statistiche</string>
	<string name="classifica">Classifica</string>
	<string name="stat_giocate">Partite giocate: </string>
	<string name="stat_vinte">Vittorie: </string>
	<string name="stat_perse">Sconfitte: </string>
	<string name="stat_pareggiate">Pareggi: </string>
	<string name="stat_abbandonate">Abbandoni: </string>
	<string name="stat_punti">Punti: </string>
	<string name="email_non_valida">Inserisci un\'email valida</string>
	<string name="ad_non_skippable">E\' obbligatoria la visualizzazione di almeno 3 secondi di pubblicità</string>
	<string name="errore_versione">Per poter accedere, scarica l\'ultima versione di Math Challenger dal Play Store</string>
	<string name="invalid_registration_username_length">La lunghezza dell\'username deve essere di almeno 3 caratteri</string>
	<string name="invalid_registration_username_space_not_allowed">Non è consentito l\'utilizzo di spazi all\'interno dell\'username</string>
	<string name="reg_password_space_not_allowed">Non è consentito l\'utilizzo di spazi all\'interno della password</string>
	<string name="add_friend_visualizza">+Amico</string>
	<string name="clickToStart">Avvia il gioco</string>
	<string name="prossimaDomanda">Prossima domanda</string>
	<string name="invioRisposte">Invio risposte</string>
</resources>
