<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="it.unisa.mathchallenger.HomeGiocoActivity" >

    <item
        android:id="@+id/action_cambia_password_menu"
        android:orderInCategory="100"
        android:title="@string/action_cambia_password_menu"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_logout_menu"
        android:orderInCategory="100"
        android:title="@string/action_logout_menu"
        app:showAsAction="never"/>
	<item
        android:id="@+id/action_exit_menu"
        android:orderInCategory="100"
        android:title="@string/action_exit_menu"
        app:showAsAction="never"/>
</menu>
