<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ContainerRegistra"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_potrait_no"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/visualizzaUsernameProprioTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title_tv"
        android:textColor="@color/White"
        android:textSize="@dimen/size_default_title"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/register_username_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/username_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/username_hint"
            android:padding="5dp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/register_password1_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_pass1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/register_password2_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/password_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_pass2_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/conferma_password_registrazione_hint"
            android:inputType="textPassword"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/register_email_tv"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/email_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reg_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/reg_registra_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="onClickRegistra"
        android:text="@string/register_button"
        android:textStyle="bold" />

</LinearLayout>