<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ContainerRecupera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_potrait_no"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/resetpass_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/reset_pass_title_tv"
        android:textColor="@color/White"
        android:textSize="@dimen/size_default_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resetpass_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/reset_pass_text"
        android:textColor="@color/White"
        android:textSize="@dimen/size_default_text"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp" >

        <TextView
            android:id="@+id/resetpass_username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:text="@string/username_tv"
            android:textColor="@color/White" />

        <EditText
            android:id="@+id/reset_username_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/username_hint"
            android:padding="5dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/reg_reset_pass_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_style"
        android:onClick="onClickResetPassword"
        android:text="@string/reset_password_button"
        android:textStyle="bold" />

</LinearLayout>
