<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cambiapasslayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_potrait_no"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.unisa.mathchallenger.ActivityCambiaPassword$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/visualizzaUsernameProprioTV"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cambio_pass_vecchia"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vecchia_pass_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/VisualizzaUsernameAvversarioTV"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cambio_pass_nuova_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass1_cambia_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/tv_partite_pareggiate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/cambia_password_conferma_tv"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pass2_cambia_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_crea_casuale"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:onClick="onClickCambiaPassword"
        android:text="@string/action_cambia_password_menu"
        android:textColor="@color/black"
        android:textStyle="bold" />

</LinearLayout>